# MidnightCommits

./: .gitignore  ARCHITECTURE.md  README.md  backend.py  docker-compose.yml  indexer.py  main.py  producer.py  pyproject.toml  schema.sql  test_queries.sql
Expirements/: data.py  github_events_data.csv
midnight-commit-ui/: package-lock.json  package.json
midnight-commit-ui/src/: App.css  App.js  Dashboard.css  Dashboard.js
midnight-commit-ui/src/components/: InsightCard.js  ReleaseTicker.js
midnight-commit-ui/src/components/charts/: ActivityDonut.js  InnovationBar.js
